2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (default): Report errors if it has occurred while
	examining modules.

	* w3m.el: Add autoload for `w3m-remove-image' when compiling.

	* w3mhack.el: Use `require' instead of `load' for loading "w3m" to
	avoid undesirable newlines in stdout.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el: Require `wid-edit' when the widget `coding-system'
	is not available.

	* mime-w3m.el: Add autoload for `font-set-face-background' since it
	is not auto-autoload'ed in XEmacs.

	* w3mhack.el: Require `bytecomp'; make XEmacs don't warn for unused
	non-global variables.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Bind colon keywords only if it is not available.
	(rfc2368-parse-mailto-url):
	(w3m-form-parse-region):
	(w3m-fontify-forms): Bind them only at the compile-time as
	autoload'ed functions to avoid byte-compile warnings.

	* w3mhack.el: Byte optimize `truncate-string' for replacing with
	`truncate-string-to-width' if it is bound.

	* mew-w3m.el (mew-w3m-minor-mode-setter): Defun it after defining
	some variables.

2001-03-15  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* Makefile.in (default): Add `-k' option to continue byte-compile
	as much as possible after an error.

2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (default): Don't use `for' loop.
	* w3mhack.el (w3mhack-examine-modules): Use space instead of
	newline for the module names separator.

2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Removed functions and variables of bookmark.
	* w3m-bookmark.el: New file.
	* Makefile.in: Clean up rules and removed GNU-make depended
	functions.
	* w3mhack.el (TopLevel): Load w3m.el.
	(w3mhack-version): New function.
	* .cvsignore: Add files generated by autoconf.

2001-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Renamed from
	`w3mhack-examine-additional-modules'.